--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
